--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,10 @@ body {
     /* display: block;
     margin: auto; */
     position: fixed;
-}
-
-.container {
-    /* width: 100%; */
-	/* margin: 0 auto; 
-	text-align: center; */
+    text-align: center;
+    position: relative;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .box {
@@ -19,6 +17,8 @@ body {
     color: black;
     font-size: 50px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 #instructions {
@@ -27,6 +27,8 @@ body {
     border-style: solid;
     border-width: 5px;
     border-color: grey;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 #goal {
@@ -35,6 +37,8 @@ body {
     border-style: solid;
     border-width: 5px;
     border-color: grey;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 
@@ -74,16 +78,18 @@ body {
     background: white;
     margin-top: 20px;
     border-style: solid;
-    border-width: 5px;
+    border-width: 5px 5px 0px 5px;
     border-color: grey;
+    padding-top: 5px;
 }
 
 #pointsAdd {
     background: white;
     border-style: solid;
-    border-width: 5px;
+    border-width: 0px 5px 5px 5px;
     border-color: grey;
     height: 18px;
+    padding-bottom: 5px;
 }
 
 #gameStats {
@@ -93,4 +99,6 @@ body {
     border-style: solid;
     border-width: 5px;
     border-color: grey;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
